[project]
name = "OpenSeriesBellshade"
version = "1.6.6"
dynamic = [
  "dependencies"
]
description = "library untuk membantu temen-temen dalam perhitungan matematika"
readme = "README.md"
requires-python = ">=3.11.6"
keywords = [
  "OpenSeriesBellshade",
  "openseries",
  "bellshade",
]
license = {text = "MIT"}
authors = [
  {name = "bellshade wpu kelas terbuka"},
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: Indonesian",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool]
[tool.setuptools.packages.find]
include = ["OpenSeries*"]
exclude = ["example"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.distutils.bdist_wheel]
universal = true

[project.urls]
Homepage = "https://github.com/bellshade/OpenSeries"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

